# ZymeraLab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: docs.js  index.html  style.css  tutorial-env.html
docs/plans/: 2026-06-12-kymera-implementation.md  2026-06-12-zymera-implementation.md  2026-06-25-zymera-lab-p1-scaffold.md
docs/specs/: 2026-06-11-kymera-design.md  2026-06-11-zymera-design.md  2026-06-25-zymera-lab-design.md
kymera/: __init__.py  comms.py  dynamics.py  env.py  metrics.py  missions.py  missions_terms.py  obs.py  rollout.py
kymera/viz/: __init__.py  render.py  report.py
tests/: conftest.py  test_comms.py  test_docs.py  test_dynamics.py  test_env.py  test_metrics.py  test_missions.py  test_nets.py  test_obs.py  test_occupancy.py  test_parity.py  test_sensor.py  test_train.py  test_viz.py  test_wall_sensing.py  test_worldgen.py
tests/golden/: commcov.npz  empty.npz
zymera/: __init__.py  comms.py  env.py  metrics.py  missions.py  missions_terms.py  nets.py  obs.py  sensor.py  train.py  worldgen.py
zymera/lab/: __init__.py
zymera/viz/: __init__.py  report.py
